--- a/klaus-site.css
+++ b/klaus-site.css
@@ -110,7 +110,7 @@ nav ul li a{
     text-transform: capitalize;
 }
 nav ul li a:hover{
-    color: red;
+    color: #6de3d7;
     transition: .4s;
     
 }
@@ -172,12 +172,13 @@ nav ul li a:hover{
 
 
 .klausimg{
-    height: 380px;
-     width: 350px;
+    height: 500px;
+     width: 500px;
      margin: 20px;
      padding: 10px;
      border: 2px solid;
-     margin-left: 100px;
+     margin-left: 200px;
+     
       }
 
 
@@ -187,12 +188,13 @@ nav ul li a:hover{
 
 
 .about-text{
-    width: 400px;
-    height: 380px;
+    width: auto;
+    height: auto;
     margin: 20px;
     padding: 10px;
     border: 1px;
     margin-right: 100px;
+    text-align: center;
 }
 
 
@@ -304,7 +306,7 @@ background-attachment: fixed;
  
    padding: 20px;
    height: 550px;
-   width: 400px;
+   width: 600px;
   border: 1px;
   color: transparent;
   margin: 20px;
@@ -392,16 +394,18 @@ h1{
 } 
 
 .heroo--secondary {
-	--mask: radial-gradient(circle at var(--x, 70%) var(--y, 50%), black 25%, transparent 0);
+	--mask: radial-gradient(circle at var(--x, 70%) var(--y, 50%), black 35%, transparent 0);
 	
     bottom:0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(20deg, #293433, #765a83, #383537, rgb(44, 42, 39));
+	
 	color: rgb(9, 14, 23);
 	-webkit-mask-image: var(--mask);
 	mask-image: var(--mask);
+    background-image: url(animationbacground.jpg);
+    background-size: cover;
 }
 
 .heroo__heading {
