--- a/klaus-site.css
+++ b/klaus-site.css
@@ -416,3 +416,116 @@ h1{
 
 
 
+.section-6{
+    width: 100%;
+    height: 70vh;
+   
+    position: relative;
+    background-image: url(panel2.jpg) ;
+background-origin: padding-box;
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+display: flex;
+justify-content: center;
+
+    
+
+   }
+
+   .button-1{
+    width: 80px !important;
+    cursor: pointer;
+    height: 80px;
+   
+    border-radius: 10px;
+    
+    display: flex;
+    justify-content: center;
+    text-transform: capitalize;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    overflow: hidden;
+    transition: all 0.5s;
+    flex-direction: column;
+
+
+   }
+
+ .button-1 .icon{
+    
+    width: 100%;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: blue;
+    background-color: #FFF;
+    transition: all 0.5s;
+ }
+
+ .button-1 .icon .fa{
+    left:25px;
+    transition: all 0.5s;
+    z-index: 9;
+    position: relative;
+ }
+
+ .button-1 .text-button{
+   color: #FFF;
+   width: 100%;
+   height: 60%;
+    display: flex;
+    flex-direction: column;
+    background-color: blue;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s;
+ }
+
+ .icon:after{
+	left:-9%;
+	top: 100%;
+	border: solid transparent;
+	content: " ";
+	height: 25px;
+	width: 25px;
+	position: relative;
+    rotate: 90deg;
+    transition: all 0.5s;
+  
+	pointer-events: none;
+}
+.icon:after {
+ 
+	border-left-color: #ffffff;
+	border-width: 25px;
+    transition: all 0.5s;
+
+}
+
+.button-1:hover {
+    width: 150px !important;
+  height: 50px;
+  flex-direction: unset;
+  transition: all 0.5s;
+  }
+  
+  .button-1:hover .icon{
+    width: 30% !important;
+    height: 100% !important;
+    transition: all 0.5s;
+  }
+
+  .button-1:hover .text-button{
+    width: 70%;
+    height: 100%;
+    transition: all 0.5s;
+  }
+  .button-1:hover  .icon:after {
+  rotate: 0deg;
+  top: 0%;
+  left: 70%;
+  transition: all 0.5s;
+  }
+
